Fri Mar 19 17:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* drawboard3d.c: Avoid readjusting board when cube changes

Mon Mar 8 7:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkcolour3d.c: Remove gtk warning message

Thu Mar 4 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* widget3d.c: Remove 3d accelerated test on non-windows platforms
		as didn't work very well...

Thu Jan 29 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* drawboard3d.c, misc3d.c: 3d quick draw-last options added

Wed Jan 28 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* drawboard3d.c, misc3d.c: 3d quick draw-chequer target help added

Tue Jan 27 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* drawboard3d.c, misc3d.c: 3d quick draw flag waving code

Wed Jan 21 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* misc3d.c: Roll dice quick draw added

Mon Jan 19 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* drawboard3d.c, misc3d.c, widget3d.c: More 3d quick draw option stuff

Fri Jan 16 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	drawboard3d.c, inc3d.h, misc3d.c, widget3d.c: 3d quick draw option

Fri Nov 21 11:38:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* drawboard3d.c: Fixed small bug

Tue Nov 18 12:38:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* drawboard3d.c: Fixed chequer transparancy problem

Mon Oct 20 10:38:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* drawboard3d.c, misc3d.c: Make chequers look smoother

Sat Oct 18 13:46:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* drawboard3d.c, misc3d.c: Minor fixes

Fri Oct 17 16:31:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* drawboard3d.c, misc3d.c: Make 3d dice look smoother

Thu Oct 16 11:58:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkcolour3d.c: Small fix to insure opacity set at right time

Mon Sep 22 11:50:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
